Use installer argument
